--- a/index.html
+++ b/index.html
@@ -5,10 +5,162 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Interactive Geometry</title>
+    <!-- daisyUI & talwindcss link -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.50.1/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Custome tailwind css -->
+    <script>
+        tailwind.config = {
+            theme: {
+                'xs': '450px',
+                extend: {
+                    screens: {
+                        'xs': '280px',
+                    },
+                }
+            }
+        }
+    </script>
 </head>
 
 <body>
+    <!-------------------------------------------------------------------------
+                            Header section
+    --------------------------------------------------------------------------->
+    <header class="container mx-auto">
+        <nav class="bg-blue-200 flex justify-between items-center my-4 py-4 px-3 rounded-lg">
+
+            <head>
+                <h1 class="text-3xl font-bold text-center">Interactive <br><span class="font-normal text-xl">Geometry
+                        book</span></h1>
+            </head>
+            <button class="px-8 py-4 bg-blue-500 rounded-lg font-semibold text-lg text-white">Blog</button>
+        </nav>
+    </header>
+    <!-------------------------------------------------------------------------
+                            Main section
+    --------------------------------------------------------------------------->
+    <main class="container mx-auto">
+        <section class="flex xs:flex-col sm:flex-col lg:flex-row justify-between">
+            <!-- Interactive section -->
+            <!-- ------------------- -->
+            <div class="gap-5 grid order-1 xs:grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 mt-5">
+                <!-- Triangle Card -->
+                <div class="p-5 rounded-xl shadow-2xl text-center">
+                    <div class="flex justify-center">
+                        <img src="images/triangle.png" alt="yellow triangle">
+                    </div>
+                    <h3 class="text-xl font-semibold py-1">Triangle</h3>
+                    <h4 class="py-1">Area (A) = 0.5 x b x h</h4>
+                    <!-- display input -->
+                    <div class="py-1 flex gap-3 justify-center">
+                        <h4>b=<span>4</span>cm h=<span>5</span>cm</h4>
+                        <img class="w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
+                    </div>
+                    <!-- input field -->
+                    <div class="py-4 flex gap-1 justify-center items-center">
+                        <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="b">
+                        <label for="">cm</label>
+                        <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="h">
+                        <label for="">cm</label>
+                        <img class="w-6 h-6 p-1 ml-3 rounded-md bg-blue-200 hover:bg-blue-500"
+                            src="images/check-mark.png" alt="check-mark icon">
+                    </div>
+                    <button class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
+                </div>
+                <!-- Triangle Card -->
+                <div class="p-5 rounded-xl shadow-2xl text-center">
+                    <img src="images/triangle.png" alt="yellow triangle">
+                    <h3 class="text-xl font-semibold py-1">Triangle</h3>
+                    <h4 class="py-1">Area (A) = 0.5 x b x h</h4>
+                    <!-- display input -->
+                    <div class="py-1 flex gap-3 justify-center">
+                        <h4>b=<span>4</span>cm h=<span>5</span>cm</h4>
+                        <img class="w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
+                    </div>
+                    <!-- input field -->
+                    <div class="py-4 flex gap-1 justify-center items-center">
+                        <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="b">
+                        <label for="">cm</label>
+                        <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="h">
+                        <label for="">cm</label>
+                        <img class="w-6 h-6 p-1 ml-3 rounded-md bg-blue-200 hover:bg-blue-500"
+                            src="images/check-mark.png" alt="check-mark icon">
+                    </div>
+                    <button class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
+                </div>
+                <!-- Triangle Card -->
+                <div class="p-5 rounded-xl shadow-2xl text-center">
+                    <img src="images/triangle.png" alt="yellow triangle">
+                    <h3 class="text-xl font-semibold py-1">Triangle</h3>
+                    <h4 class="py-1">Area (A) = 0.5 x b x h</h4>
+                    <!-- display input -->
+                    <div class="py-1 flex gap-3 justify-center">
+                        <h4>b=<span>4</span>cm h=<span>5</span>cm</h4>
+                        <img class="w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
+                    </div>
+                    <!-- input field -->
+                    <div class="py-4 flex gap-1 justify-center items-center">
+                        <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="b">
+                        <label for="">cm</label>
+                        <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="h">
+                        <label for="">cm</label>
+                        <img class="w-6 h-6 p-1 ml-3 rounded-md bg-blue-200 hover:bg-blue-500"
+                            src="images/check-mark.png" alt="check-mark icon">
+                    </div>
+                    <button class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
+                </div>
+                <!-- Triangle Card -->
+                <div class="p-5 rounded-xl shadow-2xl text-center">
+                    <img src="images/triangle.png" alt="yellow triangle">
+                    <h3 class="text-xl font-semibold py-1">Triangle</h3>
+                    <h4 class="py-1">Area (A) = 0.5 x b x h</h4>
+                    <!-- display input -->
+                    <div class="py-1 flex gap-3 justify-center">
+                        <h4>b=<span>4</span>cm h=<span>5</span>cm</h4>
+                        <img class="w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
+                    </div>
+                    <!-- input field -->
+                    <div class="py-4 flex gap-1 justify-center items-center">
+                        <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="b">
+                        <label for="">cm</label>
+                        <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="h">
+                        <label for="">cm</label>
+                        <img class="w-6 h-6 p-1 ml-3 rounded-md bg-blue-200 hover:bg-blue-500"
+                            src="images/check-mark.png" alt="check-mark icon">
+                    </div>
+                    <button class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
+                </div>
+
+            </div>
+            <!-- Total Calculation section -->
+            <!-- ------------------------- -->
+            <div class="text-center order-2 mt-5">
+                <h3 class="font-semibold text-xl underline">Area Calculation</h3>
+                <div class="">
+                    <table class="table w-full">
+                        <tbody>
+                            <!-- row 1 -->
+                            <tr class="hover">
+                                <th>1</th>
+                                <td>Triangle</td>
+                                <td>12m<sup>2</sup></td>
+                                <td><button
+                                        class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Convert
+                                        to m<sup>2</sup></button></td>
+                            </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+
+            </div>
+        </section>
+    </main>
+
+    <!-- JavaScript Files -->
+    <script src="js/app.js"></script>
 
 </body>
 
