calculated Triangle , Pentagon, Parallelogram, rectangle

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <img src="images/triangle.png" alt="yellow triangle">
                     </div>
                     <h3 class="text-xl font-semibold py-1">Triangle</h3>
-                    <h4 class="py-1 text-xs">Area (A) = 0.5 x b x h</h4>
+                    <h4 class="py-1 text-xs">Area (A) = <span>0.5</span> x <span>b</span> x <span>h</span></h4>
                     <!-- display input -->
                     <div class="py-1 flex gap-3 justify-center">
                         <h4>b=<span>4</span>cm h=<span>5</span>cm</h4>
@@ -83,7 +83,7 @@
                         <img src="images/rectangle.png" alt="yellow triangle">
                     </div>
                     <h3 class="text-xl font-semibold py-1">Rectangle</h3>
-                    <h4 class="py-1 text-xs">Area (A) = w x l</h4>
+                    <h4 class="py-1 text-xs">Area (A) = <span>w </span>x <span>l</span></h4>
                     <!-- display input -->
                     <div class="py-1 flex gap-3 justify-center">
                         <h4>w=<span>4</span>cm l=<span>5</span>cm</h4>
