table added and fixed

--- a/index.html
+++ b/index.html
@@ -212,16 +212,16 @@
                 <h3 class="font-semibold text-xl underline">Area Calculation</h3>
                 <div class="">
                     <table class="table w-full">
-                        <tbody>
+                        <tbody id="table-body">
                             <!-- row 1 -->
-                            <tr class="hover">
+                            <!-- <tr class="hover">
                                 <th>1</th>
                                 <td>Triangle</td>
                                 <td>12m<sup>2</sup></td>
                                 <td><button
                                         class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Convert
                                         to m<sup>2</sup></button></td>
-                            </tr>
+                            </tr> -->
 
                         </tbody>
                     </table>
