--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             Main section
     --------------------------------------------------------------------------->
     <main class="container mx-auto">
-        <section class="flex xs:flex-col sm:flex-col md:flex-row lg:flex-row justify-between">
+        <section class="flex xs:flex-col sm:flex-col md:flex-row lg:flex-row justify-between gap-4">
             <!-- Interactive section -->
             <!-- ------------------- -->
             <div class="gap-5 grid order-1 xs:grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 mt-5">
@@ -152,7 +152,8 @@
                             class="w-6 h-6 p-1 ml-3 rounded-md bg-blue-200 hover:bg-blue-500"
                             src="images/check-mark.png" alt="check-mark icon">
                     </div>
-                    <button class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
+                    <button id="btn-rhombus-calculate"
+                        class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
                 </div>
 
                 <!---- Pentagon ----->
@@ -213,16 +214,7 @@
                 <div class="">
                     <table class="table w-full">
                         <tbody id="table-body">
-                            <!-- row 1 -->
-                            <!-- <tr class="hover">
-                                <th>1</th>
-                                <td>Triangle</td>
-                                <td>12m<sup>2</sup></td>
-                                <td><button
-                                        class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Convert
-                                        to m<sup>2</sup></button></td>
-                            </tr> -->
-
+                            <!-- tr -->
                         </tbody>
                     </table>
                 </div>
