--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h3 class="text-xl font-semibold py-1">Triangle</h3>
                     <h4 class="py-1 text-xs">Area (A) = <span>0.5</span> x <span>b</span> x <span>h</span></h4>
                     <!-- display input -->
-                    <div class="py-1 flex gap-3 justify-center">
+                    <div class="py-2 flex gap-3 justify-center">
                         <h4>b=<span>4</span>cm h=<span>5</span>cm</h4>
                         <!-- edit icon -->
                         <img class="btn-edit w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon"
@@ -85,7 +85,7 @@
                     <h3 class="text-xl font-semibold py-1">Rectangle</h3>
                     <h4 class="py-1 text-xs">Area (A) = <span>w </span>x <span>l</span></h4>
                     <!-- display input -->
-                    <div class="py-1 flex gap-3 justify-center">
+                    <div class="py-2 flex gap-3 justify-center">
                         <h4>w=<span>4</span>cm l=<span>5</span>cm</h4>
                         <img class="btn-edit w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
                     </div>
@@ -112,12 +112,12 @@
                     <h3 class="text-xl font-semibold py-1">Parallelogram</h3>
                     <h4 class="py-1 text-xs">Area (A) = b x h</h4>
                     <!-- display input -->
-                    <div class="py-1 flex gap-3 justify-center">
+                    <div class="py-2 flex gap-3 justify-center">
                         <h4>b=<span>10</span>cm h=<span>12</span>cm</h4>
-                        <img class="w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
+                        <img class="btn-edit w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
                     </div>
                     <!-- input field -->
-                    <div class="py-4 flex gap-1 justify-center items-center">
+                    <div class="hidden py-4 gap-1 justify-center items-center">
                         <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="b">
                         <label for="">cm</label>
                         <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="h">
@@ -125,7 +125,8 @@
                         <img class="btn-to-display w-6 h-6 p-1 ml-3 rounded-md bg-blue-200 hover:bg-blue-500"
                             src="images/check-mark.png" alt="check-mark icon">
                     </div>
-                    <button class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
+                    <button
+                        class="btn-calculate mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
                 </div>
 
                 <!---- Rhombus ------>
@@ -137,13 +138,13 @@
                     <h3 class="text-xl font-semibold py-1">Rhombus</h3>
                     <h4 class="py-1 text-xs">Area (A) = 0.5 x d<sub>1</sub> x d<sub>2</sub></h4>
                     <!-- display input -->
-                    <div class="py-1 flex gap-3 justify-center">
+                    <div class="py-2 flex gap-3 justify-center">
                         <h4>d<sub>1</sub>=<span id="spacial-value-one">10</span>cm d<sub>2</sub>=<span
                                 id="spacial-value-two">12</span>cm</h4>
-                        <img class="w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
+                        <img class="btn-edit w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
                     </div>
                     <!-- input field -->
-                    <div class="py-4 flex gap-1 justify-center items-center">
+                    <div class="hidden py-4 gap-1 justify-center items-center">
                         <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="d1">
                         <label for="">cm</label>
                         <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="d2">
@@ -165,12 +166,12 @@
                     <h3 class="text-xl font-semibold py-1">Pentagon</h3>
                     <h4 class="py-1 text-xs">Area (A) = 0.5 x p x b</h4>
                     <!-- display input -->
-                    <div class="py-1 flex gap-3 justify-center">
+                    <div class="py-2 flex gap-3 justify-center">
                         <h4>p=<span>6</span>cm b=<span>10</span>cm</h4>
-                        <img class="w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
+                        <img class="btn-edit w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
                     </div>
                     <!-- input field -->
-                    <div class="py-4 flex gap-1 justify-center items-center">
+                    <div class="hidden py-4 gap-1 justify-center items-center">
                         <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="p">
                         <label for="">cm</label>
                         <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="b">
@@ -178,7 +179,8 @@
                         <img class="btn-to-display w-6 h-6 p-1 ml-3 rounded-md bg-blue-200 hover:bg-blue-500"
                             src="images/check-mark.png" alt="check-mark icon">
                     </div>
-                    <button class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
+                    <button
+                        class="btn-calculate mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
                 </div>
 
                 <!-- Ellipse --->
@@ -187,15 +189,15 @@
                     <div class="flex justify-center items-center">
                         <img src="images/ellipse.png" alt="grey ellipse">
                     </div>
-                    <h3 class="text-xl font-semibold py-1">Ellipse</h3>
+                    <h3 id="ellipse-id-name" class="text-xl font-semibold py-1">Ellipse</h3>
                     <h4 class="py-1 text-xs">Area (A) = &#960ab</h4>
                     <!-- display input -->
-                    <div class="py-1 flex gap-3 justify-center">
-                        <h4>a=<span>10</span>cm b=<span>4</span>cm</h4>
-                        <img class="w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
+                    <div class="py-2 flex gap-3 justify-center">
+                        <h4>a=<span id="pi-value-one">10</span>cm b=<span id="pi-value-two">4</span>cm</h4>
+                        <img class="btn-edit w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
                     </div>
                     <!-- input field -->
-                    <div class="py-4 flex gap-1 justify-center items-center">
+                    <div class="hidden py-4 gap-1 justify-center items-center">
                         <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="a">
                         <label for="">cm</label>
                         <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="b">
@@ -203,7 +205,8 @@
                         <img class="btn-to-display w-6 h-6 p-1 ml-3 rounded-md bg-blue-200 hover:bg-blue-500"
                             src="images/check-mark.png" alt="check-mark icon">
                     </div>
-                    <button class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
+                    <button id="btn-ellipse-calculate"
+                        class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
                 </div>
 
             </div>
