Rhombus optimized and square meter conversion added

--- a/index.html
+++ b/index.html
@@ -139,22 +139,21 @@
                     <h4 class="py-1 text-xs">Area (A) = 0.5 x d<sub>1</sub> x d<sub>2</sub></h4>
                     <!-- display input -->
                     <div class="py-2 flex gap-3 justify-center">
-                        <h4>d<sub>1</sub>=<span id="spacial-value-one">10</span>cm d<sub>2</sub>=<span
-                                id="spacial-value-two">12</span>cm</h4>
+                        <h4>d&#8321;=<span>10</span>cm d&#8322;=<span>12</span>cm</h4>
                         <img class="btn-edit w-6 h-6 hover:bg-blue-500" src="images/edit.png" alt="edit icon">
                     </div>
                     <!-- input field -->
                     <div class="hidden py-4 gap-1 justify-center items-center">
-                        <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="d1">
+                        <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="d &#8321;">
                         <label for="">cm</label>
-                        <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="d2">
+                        <input class="pl-3 w-16 bg-gray-200 rounded-md" type="text" placeholder="d &#8322;">
                         <label for="">cm</label>
                         <img id="special-btn-to-display"
-                            class="w-6 h-6 p-1 ml-3 rounded-md bg-blue-200 hover:bg-blue-500"
+                            class="btn-to-display w-6 h-6 p-1 ml-3 rounded-md bg-blue-200 hover:bg-blue-500"
                             src="images/check-mark.png" alt="check-mark icon">
                     </div>
                     <button id="btn-rhombus-calculate"
-                        class="mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
+                        class="btn-calculate mt-1 py-2 px-7 bg-blue-500 text-white rounded-lg font-semibold">Calculate</button>
                 </div>
 
                 <!---- Pentagon ----->
