random color and blog added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h1 class="text-3xl font-bold text-center">Interactive <br><span class="font-normal text-xl">Geometry
                         book</span></h1>
             </head>
-            <button class="px-8 py-4 bg-blue-500 rounded-lg font-semibold text-lg text-white">Blog</button>
+            <button id="blog" class="px-8 py-4 bg-blue-500 rounded-lg font-semibold text-lg text-white">Blog</button>
         </nav>
     </header>
     <!-------------------------------------------------------------------------
@@ -49,7 +49,7 @@
 
                 <!-- Triangle -->
                 <!-- Card No1.-->
-                <div class="p-5 rounded-xl shadow-2xl text-center">
+                <div class="display-card p-5 rounded-xl shadow-2xl text-center">
                     <div class="flex justify-center items-center">
                         <img src="images/triangle.png" alt="yellow triangle">
                     </div>
@@ -78,7 +78,7 @@
 
                 <!-- Rectangle -->
                 <!-- Card No2.-->
-                <div class="p-5 rounded-xl shadow-2xl text-center">
+                <div class="display-card p-5 rounded-xl shadow-2xl text-center">
                     <div class="flex justify-center items-center">
                         <img src="images/rectangle.png" alt="yellow triangle">
                     </div>
@@ -105,7 +105,7 @@
 
                 <!-- Parallelogram -->
                 <!---- Card No3.----->
-                <div class="p-5 rounded-xl shadow-2xl text-center">
+                <div class="display-card p-5 rounded-xl shadow-2xl text-center">
                     <div class="flex justify-center items-center">
                         <img src="images/parallelogram.png" alt="Parallelogram">
                     </div>
@@ -131,7 +131,7 @@
 
                 <!---- Rhombus ------>
                 <!---- Card No4.----->
-                <div class="p-5 rounded-xl shadow-2xl text-center">
+                <div class="display-card p-5 rounded-xl shadow-2xl text-center">
                     <div class="flex justify-center items-center">
                         <img src="images/rhombus.png" alt="rhombus">
                     </div>
@@ -157,8 +157,8 @@
                 </div>
 
                 <!---- Pentagon ----->
-                <!---- Card No3.----->
-                <div class="p-5 rounded-xl shadow-2xl text-center">
+                <!---- Card No5.----->
+                <div class="display-card p-5 rounded-xl shadow-2xl text-center">
                     <div class="flex justify-center items-center">
                         <img src="images/pentagon.png" alt="salmon color pentagon">
                     </div>
@@ -184,7 +184,7 @@
 
                 <!-- Ellipse --->
                 <!-- Card No6.-->
-                <div class="p-5 rounded-xl shadow-2xl text-center">
+                <div class="display-card p-5 rounded-xl shadow-2xl text-center">
                     <div class="flex justify-center items-center">
                         <img src="images/ellipse.png" alt="grey ellipse">
                     </div>
