--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <section class="flex xs:flex-col sm:flex-col md:flex-row lg:flex-row justify-between gap-4">
             <!-- Interactive section -->
             <!-- ------------------- -->
-            <div class="gap-5 grid order-1 xs:grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 mt-5">
+            <div
+                class="gap-5 grid order-1 xs:grid-cols-1 sm:grid-cols- md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 mt-5">
 
                 <!-- Triangle -->
                 <!-- Card No1.-->
