--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
     <header class="px-5">
         <h2 class="text-3xl text-center py-11">Question Answered</h2>
     </header>
-    <main class="px-5">
+    <main class="px-5 pb-10">
         <div class="">
             <h3 class="text-xl font-bold py-3">
                 <!-- Question  -->
